@@ -42,6 +42,10 @@ xx/xx/2006 - 1.13.1-WIP
 	  default.  (Szaka)
 	- configure.ac: set PKG_CONFIG_PATH during build time so we should
 	  find .pc files in the most typical pkgconfig directories.  (Szaka)
+	- Improve ntfsinfo to dump standard info completely and filename
+	  attribute completely and index entry (filename) completely and all in
+	  correct order.  Essential for hunting bugs in directory operations
+	  code...  (Anton)
 
 27/02/2006 - 1.13.0 - Lots and lots and lots of fixes and enhancements.
 
